# pm-os

./: .gitignore  CLAUDE.md  pyproject.toml  session-handoff.md
.claude/commands/: place-files.md  spec-agent.md  status.md
_system/: agent-log.md  session-handoff.md
_system/model-eval/: benchmark-mapping.md  eval-notes 2.md  eval-notes.md  raw-evals.md
_system/orchestrator/: default_config.yaml  design.md  orchestrator-design.md
_system/prompt-templates/smoke/: ping.md
pmos/: __init__.py  config.py  gate.py  judgment.py  orchestrator.py  prompts.py  retry.py  state.py  telemetry.py  validation.py
pmos/adapters/: __init__.py  base.py  claude.py
pmos/agents/: base.py  llm.py  noop.py  smoke.py
products/titato/architecture/: decision.md  options.md
products/titato/backlog/: epics.md  sprint-current.md
products/titato/context/: project-context.md
products/titato/decisions/: log.md
products/titato/eval/: gold-set.md  regression-log.md  rubric.md
products/titato/observability/: agent-log.md
products/titato/product/: metrics-instrumentation-map.md  prd.md  product-brief.md  stage-0-product-sense.md
products/titato/research/: master-synthesis.md
products/titato/retro/: template.md
tests/: test_adapter_claude.py  test_agent_llm.py  test_config.py  test_dispatch.py  test_gate.py  test_judgment.py  test_prompts.py  test_recovery.py  test_retry.py  test_state.py  test_telemetry.py  test_validation.py
