[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pmos"
version = "0.1.0"
description = "PM OS — multi-agent orchestrator for end-to-end product workflow"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["pmos"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
